moved scroll bar closer to reading view fixed alignment of ruler overlay switched colors of underline rules based on text background color ruler height is now proportional to font size and line height (but not synchronized with text yet)

--- a/web/src/components/ReadingView.module.css
+++ b/web/src/components/ReadingView.module.css
@@ -8,6 +8,7 @@
     overflow: auto;
     position: relative;
     height: 100%;
+    margin-left: 0.5in;
 }
 
 .ContentPane {
